[package]
name = "api"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
databento = "0.11.1"
lambda_http = "0.11.4"
serde = "1.0.203"
serde_json = "1.0.117"
time = "0.3.36"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["macros"] }

[[bin]]
name = "main"
path = "src/main.rs"
