[package]
name = "websocket"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
aws_lambda_events = { version = "0.15.0", default-features = false, features = ["connect"] }
lambda_runtime = "0.11.1"
tokio = { version = "1", features = ["macros"] }
lambda_http = "0.11.1"
http = "1.1.0"
time = "0.3.36"
databento = "0.9.1"
aws-sdk-apigatewaymanagement = "1.25.0"
serde_json = "1.0.117"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
serde = "1.0.202"
log = "0.4.21"
openssl = { version = "0.10", features = ["vendored"] }