[package]
name = "connect"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
lambda_http = "0.11.1"
log = "0.4"
tokio = { version = "1", features = ["macros"] }
lambda_runtime = "0.4.0"
simple_logger = "1.0"

[[bin]]
name = "main"
path = "src/main.rs"